[project]
name = "robot-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]


[tool.basedpyright]
reportAny = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
]
